Update view menu style, fix on mobile

--- a/components/block_collection/stylesheets/block_collection.styl
+++ b/components/block_collection/stylesheets/block_collection.styl
@@ -255,7 +255,6 @@ privacy-color-hover('.grid__block--channel .grid__block__inner--privacy-', color
 
   .grid__block__content, .valign-inner, .valign-outer
     width 100%
-    max-width 315px
 
   .grid__block__inner
     border-width 2px
