--- a/components/layout/header/index.styl
+++ b/components/layout/header/index.styl
@@ -257,6 +257,7 @@ privacy-color('.search__results__result--privacy-', color)
     width 300px
     right 0
 
+
 .dropdown__inner
   border 1px solid lightgray
   background-color #fff
@@ -350,13 +351,15 @@ privacy-color('.search__results__result--privacy-', color)
     border 0
     border-bottom 1px solid lightgrayplus
 
+  .dropdown__inner
+    border 0
+
   .dropdown.dropdown--size
     width 100%
     height 100%
     padding 0
-
-  .dropdown__inner
-    border 0
+    .dropdown__inner
+      border-bottom 1px solid bordergray
 
   .dropdown__section
     font-size 1.5em
