--- a/components/new_channel/stylesheets/new_channel.styl
+++ b/components/new_channel/stylesheets/new_channel.styl
@@ -60,7 +60,7 @@
       max-width 100%
       left 0
       top 0
-      padding-top 37%
+      padding-top 120px
 
     .grid__block__inner
       height 120px
